<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    app:cardBackgroundColor="@color/appBackground"
    app:cardCornerRadius="18dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:padding="@dimen/padding14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/margin5dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_no_connection"
                android:textAppearance="@style/CardTextView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin3dp"
                android:text="@string/txt_check_internet"
                android:textColor="@color/textColorWhite2"
                android:textSize="@dimen/textSize12"
                android:textAlignment="center"
                />

        </LinearLayout>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/no_connection"
            />

        <TextView
            android:id="@+id/adTryAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin38dp"
            android:layout_marginRight="@dimen/margin38dp"
            android:background="@drawable/btn_background1"
            android:padding="@dimen/padding5dp"
            android:text="@string/txt_try_again"
            android:textAlignment="center"
            android:textColor="@color/white"
            />
    </RelativeLayout>

</androidx.cardview.widget.CardView>