<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.india_data.AllDistrictsFragment"
    android:padding="@dimen/padding5dp"
    >


    <ProgressBar
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:visibility="gone"
        >




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin18dp"
        android:text="Karnataka"
        android:textAppearance="@style/TextViewSubTitle"
        android:id="@+id/tvStateName"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/margin18dp"
        android:layout_marginTop="@dimen/margin14dp"
        android:layout_marginRight="@dimen/margin18dp"
        android:layout_marginBottom="@dimen/margin14dp"
        android:background="@color/white" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/backgroundElevation2dp"
        app:cardCornerRadius="14dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin18dp"
                android:layout_marginBottom="@dimen/margin14dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="6">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_district"
                        android:textAppearance="@style/CardTextView"
                        android:textSize="@dimen/textSize14" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_total"
                        android:textAppearance="@style/CardTextView"
                        android:textSize="@dimen/textSize14" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_active"
                        android:textAppearance="@style/CardTextView"
                        android:textSize="@dimen/textSize14" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_recover"
                        android:textAppearance="@style/CardTextView"
                        android:textSize="@dimen/textSize14" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_dead"
                        android:textAppearance="@style/CardTextView"
                        android:textSize="@dimen/textSize14" />
                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/districtRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/district_item" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    </LinearLayout>


</RelativeLayout>