<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/backgroundElevation2dp"
    app:cardCornerRadius="14dp"
    android:layout_margin="@dimen/margin8dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:orientation="vertical"
        android:padding="@dimen/padding5dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvItemIndStateName"
            android:text="West Bengal"
            android:textAppearance="@style/TextViewSubTitle"
            android:textAlignment="center"
            android:layout_margin="@dimen/margin5dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/white"
            android:layout_marginLeft="@dimen/margin32dp"
            android:layout_marginRight="@dimen/margin32dp"
            android:layout_marginBottom="@dimen/margin5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="3"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_total_case"
                        android:textAppearance="@style/CardTextViewSmall"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="360078"
                        android:textAppearance="@style/CardTextView"
                        android:layout_marginTop="@dimen/margin3dp"
                        android:id="@+id/tvItemTotalCase"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_active_cases"
                        android:textAppearance="@style/CardTextViewSmall"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="360078"
                        android:textAppearance="@style/CardTextView"
                        android:layout_marginTop="@dimen/margin3dp"
                        android:id="@+id/tvItemActiveCase"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_today_case"
                        android:textAppearance="@style/CardTextViewSmall"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="36"
                        android:textAppearance="@style/CardTextView"
                        android:layout_marginTop="@dimen/margin3dp"
                        android:id="@+id/tvItemTodayCase"
                        />
                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="3"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_recovered"
                        android:textAppearance="@style/CardTextViewSmall"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="732"
                        android:textAppearance="@style/CardTextView"
                        android:layout_marginTop="@dimen/margin3dp"
                        android:id="@+id/tvItemRecovered"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_total_deaths"
                        android:textAppearance="@style/CardTextViewSmall"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="360"
                        android:textAppearance="@style/CardTextView"
                        android:layout_marginTop="@dimen/margin3dp"
                        android:id="@+id/tvItemTotalDeath"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_deaths_today"
                        android:textAppearance="@style/CardTextViewSmall"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="6"
                        android:textAppearance="@style/CardTextView"
                        android:layout_marginTop="@dimen/margin3dp"
                        android:id="@+id/tvItemDeathToday"
                        />
                </LinearLayout>


            </LinearLayout>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin5dp"
            android:gravity="center_horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_last_updated"
                android:textColor="@color/textColorWhite3"
                android:textAppearance="@style/CardTextViewSmall"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="13/05/2020 20:33:34"
                android:textColor="@color/textColorWhite3"
                android:layout_marginLeft="@dimen/margin5dp"
                android:id="@+id/tvItemIndStateUpdated"
                android:textAppearance="@style/CardTextViewSmall"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_click_for_districts"
                android:textColor="@color/textColorWhite3"
                android:textAppearance="@style/CardTextViewSmall"
                android:textSize="12dp"
                />
        </LinearLayout>


    </LinearLayout>



</androidx.cardview.widget.CardView>